--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -13,7 +13,10 @@
   position: absolute;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgb(170, 170, 170);
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M50 10 C 30 10, 30 50, 50 50 C 70 50, 70 90, 50 90 C 30 90, 30 50, 50 50" stroke="black" fill="none" /></svg>');
+  background-repeat: repeat;
+  background-size: 50px 50px;
   z-index: 1000;
   display: flex;
   align-items: center;
@@ -22,44 +25,154 @@
 .divStyle{
   background: (0);
   width: 700px;
-  height: 300px;
-  margin: 100vh;
-  padding: 50px;
+  height: auto;
+  margin: 85vh;
+  padding: 40px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #e1e8ec;
   text-align:center;
   font-family: Courier New;
   font-size: 12px;
   font-weight:'300';
 }
 .titleStyle{
+  font-size: 33px;
   width: 100%;
-  margin-bottom: 10%;
+  color: rgb(44, 44, 44);
+  margin-bottom: 5%;
 }
 .inputStyle{
+  width: 100%;
+  background-color: #e1e8ec;
+  margin-top: 5%;
   border-radius: 5px;
   padding: 13px;
-  margin-bottom: 14%;
+  margin-bottom: -2%;
   font-size: 15px;
-  
+  border: 2px solid rgb(145, 145, 145);
+}
+.inputStyle:focus{
+  background-color: #e1e8ec; 
+  border: 2px solid rgb(145, 145, 145); 
+  outline: none; 
+  color: black;
+}
+.inputStyleP{
+  width: 100%;
+  background-color: #e1e8ec;
+  margin-top: 5%;
+  border-radius: 5px;
+  padding: 13px;
+  margin-bottom: 2%;
+  font-size: 15px;
+  border: 2px solid rgb(145, 145, 145);
+}
+.inputStyleP:focus{
+  background-color: #e1e8ec; 
+  border: 2px solid rgb(145, 145, 145); 
+  outline: none; 
+  color: black;
+}
+.error {
+  transition: .5s;
+  border: 2px solid red;
 }
 .entrarStyle{
-  width: 97%;
-  height: 22%;
-  background: linear-gradient(to bottom, #f0f0f0 50%, #9ea1a0 50%);
-  border: black solid 2px;
+  margin-top: 7%;
+  width: 98%;
+  padding: 5px 0;
+  background: rgb(110, 175, 67);
+  border: none;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 3px;
   margin-bottom: -2em;
   font-size: 17px;
   font-family: 'Courier New', Courier, monospace;
-  font-weight: 500;
+  font-weight: 700;
+  color: white;
 
-  transition: .3s;
+  transition: .2s;
 }
 .entrarStyle:hover{
-  background: linear-gradient(to bottom, #9ea1a0 50%, #f0f0f0 50%);
+  background: rgb(85, 155, 45);
 }
+.social-networks{
+  height: 10%;
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.social-networks ion-icon{
+  font-size: 27px;
+  margin-right: 15%;
+}
+.social-networks .red-f{
+  width: 48%;
+  height: 110%;
+  background: #428BCA;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+  margin-bottom: -2em;
+  font-size: 13px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+
+  transition: .2s;
+}
+.social-networks .red-f:hover{
+  background: #336a9b;
+}
+
+.social-networks .red-g{
+  width: 48%;
+  height: 110%;
+  background: #D34C3D;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+  margin-bottom: -2em;
+  font-size: 13px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+
+  transition: .2s;
+}
+.social-networks .red-g img{
+  border-radius: 20px;
+  width: 27%;
+  margin-right: 13%;
+}
+.social-networks .red-g:hover{
+  background: #a53a2e;
+}
+.social-networks button div{
+  margin-top: 2%;
+}
+.divStyle h5{
+  margin-top: 13%;
+  color: #7a7a7a;
+  font-size: 11px;
+  font-family: 'Arial', Courier, monospace;
+}
+
+
+
+
+
+
+
+
+
 
 .players-online{
     width: 15%;
@@ -299,13 +412,14 @@
 }
 
 
-
-.circle-ofline{
-    width:8px; 
-    height: 8px;
-    border-radius: 50%;
+.circle{
+  width:8px; 
+  height: 8px;
+  border-radius: 50%;
+}
+.circle.offline{
     background-color: rgb(206, 0, 0);
 }
-.circle-ofline.hidden{
+.circle.online{
   background-color: rgb(0, 206, 45);
 }
